[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version="2.0.0-rc.2", features=["serde"]}
serde = {version="1.0.147",features=["derive"]}
lc-crypto = {path="../lc-crypto",features=["sha1"]}
bitflags={version="2.0.0-rc.1", features=["serde"]}